Add About section

--- a/investors/_topbar-new.html
+++ b/investors/_topbar-new.html
@@ -206,34 +206,34 @@
                             {% endif %}
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('generalInformation').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}ข้อมูลทั่วไปของบริษัท{% else %}General Information{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('natureOfBusiness').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}ลักษณะการประกอบธุรกิจ{% else %}Nature of Business{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('groupStructure').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}โครงสร้างกลุ่มบริษัท{% else %}Group Structure{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('companyHistoryPage').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}ประวัติความเป็นมาของบริษัท{% else %}Company's History{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('messageFromTheChairman').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}สาส์นจากประธานกรรมการ{% else %}Message from the chairman{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('messageFromCeo').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}สาส์นจากผู้บริหาร{% else %}Message from CEO{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('visionMission').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}วิสัยทัศน์และพันธกิจ{% else %}Vision & Mission{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('managementStructure').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}โครงสร้างการจัดการ{% else %}Management Structure{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('boardOfDirectors').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}คณะกรรมการบริษัท{% else %}Board of Directors{% endif %}
                             </a></li>
-                            <li><a href="{{ craft.entries.section('corporateSocialResponsibility').first().url }}">
+                            <li><a href="{{ craft.entries.section('managementTeam').first().url }}">
                                 {% if craft.i18n.getCurrentLocale() == 'th' %}คณะผู้บริหาร{% else %}Management Team{% endif %}
                             </a></li>
                         </ul>
