Changed Management Team to link to individual's biography page and added A tag to <div> in Board of Directors' pages

--- a/about/biography/risk-management-committee.html
+++ b/about/biography/risk-management-committee.html
@@ -5,7 +5,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="sophon-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url">
+                    <a class="sophon-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="sophon-th" href="#">นายโสภณ ผลประสิทธิ์</a>
@@ -17,7 +17,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-th" href="#">นายธิติพงศ์ ตั้งพูนผลวิวัฒน์</a>
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="tawat-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
+                    <a class="tawat-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="tawat-th" href="#">ดร.ธวัช อนันต์ธนวณิช</a>
@@ -45,7 +45,7 @@
            
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="#" href="#">นายชัยนรินทร์ สายรังษี</a>
@@ -57,7 +57,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wisadja-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-th" href="#">นางวิสัจจา คชเสนา</a>
@@ -75,7 +75,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div id="wuttichai" class="card textCenter" style="width: 30rem;">
-                    <img class="sophon-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url">
+                    <a class="sophon-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/sophon_pholprasit.jpg#asset:2559:url">
                     <div class="card-body">
                         <p> 
                             <a class="sophon-eng" href="#">Mr. Sophon Pholprasit</a>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-eng" href="#">Mr. Thitipong Tangpoonphonvivat</a>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
                     <div class="card-body">
                         <p>                        
                             <a class="#" href="#">Dr. Tawat Anantanavanich</a>
@@ -114,7 +114,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
                     <div class="card-body">
                         <p>                        
                             <a class="#" href="#">Mr. Chainarin Sairungsri</a>
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wisadja-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-eng" href="#">Mrs. Wisadja Kochsena</a>
