--- a/about/biography/audit-committee.html
+++ b/about/biography/audit-committee.html
@@ -6,7 +6,7 @@
             
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="pannee-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url">
+                    <a class="pannee-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="pannee-th" href="#">นางพรรณี จารุสมบัติ</a>
@@ -18,7 +18,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vichaya-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="vichaya-th" href="#">ดร.วิชญะ เครืองาม</a>
@@ -37,7 +37,7 @@
         
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="pannee-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url">
+                    <a class="pannee-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/pannee_jarusombat.jpg#asset:2561:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="pannee-eng" href="#">Mrs. Pannee Jarusombat</a>
@@ -49,7 +49,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vichaya-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="vichaya-eng" href="#">Dr. Vichya Kreangam</a>
