--- a/about/biography/corporate-governance-committee.html
+++ b/about/biography/corporate-governance-committee.html
@@ -5,7 +5,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vuchaya-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="vichaya-th" href="#">ดร.วิชญะ เครืองาม</a>
@@ -17,7 +17,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wirach-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url">
+                    <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wirach-th" href="#">นายวิรัช มรกตกาล</a>
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wisadja-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="wisadja-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wisadja-th" href="#">นางวิสัจจา คชเสนา</a>
@@ -61,7 +61,7 @@
          <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vichaya-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="vichaya-eng" href="#">Dr. Vichya Kreangam</a>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wirach-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url">
+                    <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wirach-eng" href="#">Mr. Wirach Morakotkarn</a>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
@@ -99,7 +99,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wisadja-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url">
+                    <a class="wisadja-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/no-image.jpg#asset:2564:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wisadja-eng" href="#">Mrs. Wisadja Kochsena</a>
