--- a/about/biography/executive-committee.html
+++ b/about/biography/executive-committee.html
@@ -6,7 +6,7 @@
 
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-th" href="#">นายธิติพงศ์ ตั้งพูนผลวิวัฒน์</a>
@@ -18,7 +18,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="#" href="#">ดร.ธวัช อนันต์ธนวณิช</a>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
@@ -46,10 +46,9 @@
     {% else %}
 
         <div class="row" >
-
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-eng" href="#">Mr. Thitipong Tangpoonphonvivat</a>
@@ -61,7 +60,7 @@
             </div>
              <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url">
+                    <a class="#" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/tawat_anantanavanich.jpg#asset:2560:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="#" href="#">Dr. Tawat Anantanavanich</a>
@@ -71,10 +70,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-4">
                 <div id="th-borwornsak" class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
@@ -84,9 +82,6 @@
                     </div>
                 </div>
             </div>
-
-
-       
        </div>
 
     {% endif %}
