--- a/about/biography/nomination-remuneration-committee.html
+++ b/about/biography/nomination-remuneration-committee.html
@@ -1,11 +1,10 @@
     <div id="nomination-remuneration-committee">
 
     {% if craft.i18n.getCurrentLocale() == 'th' %}
-        คณะกรรมการสรรหาและพิจารณาค่าตอบแทน
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wirach-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url">
+                    <a class="wirach-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wirach-th" href="#">นายวิรัช มรกตกาล</a>
@@ -17,7 +16,7 @@
             </div>
             <div class="col-md-4">
                 <div id="th-thitipong" class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-th" href="#">นายธิติพงศ์ ตั้งพูนผลวิวัฒน์</a>
@@ -29,7 +28,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vichaya-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="vichaya-th" href="#">ดร.วิชญะ เครืองาม</a>
@@ -44,7 +43,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-th imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-th" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="wuttichai-th" href="#">นายวุฒิชัย เศรษฐบุตร</a>
@@ -57,11 +56,10 @@
         </div>
 
     {% else %}
-        Nomination and Remuneration Committee
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wirach-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url">
+                    <a class="wirach-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wirach_morakotkarn.jpg#asset:2563:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wirach-eng" href="#">Mr. Wirach Morakotkarn</a>
@@ -74,7 +72,7 @@
 
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="thitipong-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url">
+                    <a class="thitipong-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/thitipong_tangpoonphonvivat.jpg#asset:2556:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="thitipong-eng" href="#">Mr. Thitipong Tangpoonphonvivat</a>
@@ -87,7 +85,7 @@
 
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="vichaya-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url">
+                    <a class="vichaya-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/vichaya_krea_ngam.jpg#asset:2562:url"></a>
                     <div class="card-body">
                         <p> 
                             <a class="vichaya-eng" href="#">Dr. Vichya Kreangam</a>
@@ -101,7 +99,7 @@
         <div class="row" >
             <div class="col-md-4">
                 <div class="card textCenter" style="width: 30rem;">
-                    <img class="wuttichai-eng imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url">
+                    <a class="wuttichai-eng" href="#"><img class="imageCenter" style="width:245px; height:183px;" src="http://www.gel.co.th/assets/images/investor/Management-Team/wuttichai_sresthabutra.jpg#asset:2557:url"></a>
                     <div class="card-body">
                         <p>                        
                             <a class="wuttichai-eng" href="#">Mr. Wuttichai Sresthabutra</a>
