Fixed the footer

--- a/_footer.html
+++ b/_footer.html
@@ -8,22 +8,26 @@
 
 						<ul class="list-unstyled">
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/general_info.html{% else %}http://investor.gel.co.th/general_info.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/general_info.html{% else %}http://investor.gel.co.th/general_info.html{% endif %}"> -->
+                                <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/about/general-information{% else %}http://www.gel.co.th/about/general-information{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ข้อมูลทั่วไปของบริษัท{% else %}General Information{% endif %}
 								</a>
 							</li>
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/nature_business.html{% else %}http://investor.gel.co.th/nature_business.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/nature_business.html{% else %}http://investor.gel.co.th/nature_business.html{% endif %}"></a> -->
+								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/about/nature-of-business{% else %}http://www.gel.co.th/about/nature-of-business{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ลักษณะการประกอบธุรกิจ{% else %}Natural of Business{% endif %}
 								</a>
 							</li>
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/company_history.html{% else %}http://investor.gel.co.th/company_history.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/company_history.html{% else %}http://investor.gel.co.th/company_history.html{% endif %}"></a> -->
+								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/about/company-history{% else %}http://www.gel.co.th/about/company-history{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ประวัติความเป็นมาของบริษัท{% else %}Company's History{% endif %}
 								</a>
 							</li>
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/vision.html{% else %}http://investor.gel.co.th/vision.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/vision.html{% else %}http://investor.gel.co.th/vision.html{% endif %}"></a> -->
+								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/about/vision-mission{% else %}http://www.gel.co.th/about/vision-mission{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}วิสัยทัศน์และพันธกิจ{% else %}Vision & Mission{% endif %}
 								</a>
 							</li>
@@ -37,27 +41,31 @@
 						
 						<ul class="list-unstyled">
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/financial_highlights.html{% else %}http://investor.gel.co.th/financial_highlights.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/financial_highlights.html{% else %}http://investor.gel.co.th/financial_highlights.html{% endif %}"> -->
+                                <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/investors/financial-info/financial-highlights{% else %}http://www.gel.co.th/investors/financial-info/financial-highlights{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ข้อมูลทางการเงิน{% else %}Financial Information{% endif %}
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/stock_chart_interactive.html{% else %}http://investor.gel.co.th/stock_chart_interactive.html{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ข้อมูลราคาหลักทรัพย์{% else %}Stock Information{% endif %}
 								</a>
-							</li>
+							</li> -->
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/shareholdings.html{% else %}http://investor.gel.co.th/shareholdings.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/shareholdings.html{% else %}http://investor.gel.co.th/shareholdings.html{% endif %}"> -->
+                                <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/investors/shareholder-info/major-shareholders{% else %}http://www.gel.co.th/investors/shareholder-info/major-shareholders{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ข้อมูลผู้ถือหุ้น{% else %}Shareholder Information{% endif %}
 								</a>
 							</li>
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/cg_policy.html{% else %}http://investor.gel.co.th/cg_policy.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/cg_policy.html{% else %}http://investor.gel.co.th/cg_policy.html{% endif %}"></a> -->
+                                <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/investors/corporate-governance/cg-policy{% else %}http://www.gel.co.th/investors/corporate-governance/cg-policy{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}การกำกับดูแลกิจการที่ดี{% else %}Corporate Governance{% endif %}
 								</a>
 							</li>
 							<li>
-								<a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/csr.html{% else %}http://investor.gel.co.th/csr.html{% endif %}">
+                                <!-- <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://investor-th.gel.co.th/csr.html{% else %}http://investor.gel.co.th/csr.html{% endif %}"> -->
+                                <a href="{% if craft.i18n.getCurrentLocale() == 'th' %}http://www.gel.co.th/th/investors/corporate-social-responsibility{% else %}http://www.gel.co.th/investors/corporate-social-responsibility{% endif %}">
 								{% if craft.i18n.getCurrentLocale() == 'th' %}ความรับผิดชอบต่อสังคม{% else %}Corporate Social Responsibility{% endif %}
 								</a>
 							</li>
