--- a/_topbar.html
+++ b/_topbar.html
@@ -54,6 +54,7 @@
                                 
                                 <li class="dropdown-submenu" style="text-transform: uppercase;"><a href="javascript: void(0);">{{ menuGlobal.shareholderInfoMenuThai }}</a>
                                     <ul class="dropdown-menu" style="left: 240px;position: absolute; top: 40px; z-index: 204;">
+                                        <li><a href="{{ craft.entries.section('majorShareholders').first().url }}">รายชื่อผู้ถือหุ้นรายใหญ่</a></li>
                                         <li><a href="{{ craft.entries.section('shareholderMeetingsPage').first().url }}">การประชุมผู้ถือหุ้น</a></li>
                                     </ul>
                                 </li>
